samples/_failures_safe/1761544374_2646d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e892ee71.c: In function ‘main’:
./samples/SAFE/__tmp_e892ee71.c:173:5: error: expected expression at end of input
  173 |     if (
      |     ^~
./samples/SAFE/__tmp_e892ee71.c:173:5: error: expected declaration or statement at end of input
